--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,11 @@ dependencies {
     implementation 'android.arch.navigation:navigation-fragment:1.0.0'
     implementation 'android.arch.navigation:navigation-ui:1.0.0'
 
+    def room_version = "2.2.4"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+
     //def nav_version = "2.3.0-alpha01"
 
     // Java language implementation
@@ -39,5 +44,12 @@ dependencies {
 
     implementation "androidx.navigation:navigation-dynamic-features-fragment:2.3.0-alpha01"
     androidTestImplementation "androidx.navigation:navigation-testing:2.3.0-alpha01"*/
+    /*implementation "android.arch.persistence.room:runtime:$rootProject.roomVersion"
+    annotationProcessor "android.arch.persistence.room:compiler:$rootProject.roomVersion"
+    androidTestImplementation "android.arch.persistence.room:testing:$rootProject.roomVersion"
+
+    implementation "android.arch.lifecycle:extensions:$rootProject.archLifecycleVersion"
+    annotationProcessor "android.arch.lifecycle:compiler:$rootProject.archLifecycleVersion"*/
 
 }
+
