--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,13 @@ dependencies {
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'android.arch.navigation:navigation-fragment:1.0.0'
     implementation 'android.arch.navigation:navigation-ui:1.0.0'
+    implementation 'androidx.sqlite:sqlite-framework:2.0.1'
+    implementation 'androidx.room:room-runtime:2.2.4'
+    implementation 'androidx.arch.core:core-runtime:2.0.1'
+    implementation 'androidx.room:room-common:2.2.4'
+    implementation 'androidx.arch.core:core-common:2.0.1'
+    implementation 'androidx.sqlite:sqlite:2.0.1'
+    implementation 'androidx.annotation:annotation:1.1.0'
 
     def room_version = "2.2.4"
 
